// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/skeleton SkeletonAvatar should render shallow component ok 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  background-color: rgb(238,244,250);
  height: 40px;
  width: 40px;
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-0 emotion-1"
  shape="circle"
  style={Object {}}
/>
`;

exports[`components/skeleton SkeletonButton should render shallow component ok 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 36px;
  width: 36px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 36px;
  width: 36px;
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
/>
`;

exports[`components/skeleton SkeletonGrid should render shallow component ok 1`] = `
.emotion-5 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -10px;
}

.emotion-3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 10px;
  margin-left: 0;
}

.emotion-19 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 140px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 12px;
  width: 140px;
  position: relative;
  overflow: hidden;
}

.emotion-19:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-33 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
}

.emotion-13 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0;
  margin-left: 25px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-7 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  background-color: #fff;
  border: 1px solid rgb(238,244,250);
  border-radius: 3px;
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 24px;
  width: 140px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 24px;
  width: 140px;
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-15 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 24px;
  width: 70px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 24px;
  width: 70px;
  position: relative;
  overflow: hidden;
}

.emotion-15:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-2 emotion-33"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-13"
    style={Object {}}
  >
    <div
      className="emotion-2 emotion-5"
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-3"
        style={Object {}}
      >
        <div
          className="emotion-6 emotion-7"
          style={Object {}}
        >
          <div
            className="emotion-2 emotion-5"
            style={Object {}}
          >
            <div
              className="emotion-2 emotion-3"
              style={Object {}}
            >
              <div
                className="emotion-0 emotion-1"
                style={Object {}}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-2 emotion-13"
    style={Object {}}
  >
    <div
      className="emotion-2 emotion-5"
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-3"
        style={Object {}}
      >
        <div
          className="emotion-6 emotion-7"
          style={Object {}}
        >
          <div
            className="emotion-2 emotion-5"
            style={Object {}}
          >
            <div
              className="emotion-2 emotion-3"
              style={Object {}}
            >
              <div
                className="emotion-0 emotion-15"
                style={Object {}}
              />
            </div>
            <div
              className="emotion-2 emotion-3"
              style={Object {}}
            >
              <div
                className="emotion-0 emotion-19"
                style={Object {}}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonGrid should render shallow component ok 2`] = `
.emotion-3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 36px;
  width: 36px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 36px;
  width: 36px;
  position: relative;
  overflow: hidden;
}

.emotion-3:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 70px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 12px;
  width: 70px;
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-81 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
}

.emotion-9 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0;
  margin-left: 25px;
}

.emotion-35 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 140px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 12px;
  width: 140px;
  position: relative;
  overflow: hidden;
}

.emotion-35:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-43 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0;
  margin-left: 25px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-25 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #fff;
  border-bottom: 1px solid rgb(238,244,250);
}

.emotion-5 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1100px;
  margin: 0 auto;
  width: 1100px;
  height: 80px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-23 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid var(--grey300);
}

.emotion-21 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0px auto;
  width: 1100px;
}

.emotion-19 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
  height: 46px;
}

.emotion-85 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-83 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 50px auto;
  width: 1100px;
}

.emotion-41 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 16px;
  padding-top: 75px;
  padding-bottom: 150px;
  background-color: #fff;
  border: 1px solid rgb(238,244,250);
  border-radius: 3px;
}

.emotion-39 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -25px;
}

.emotion-29 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 25px;
  margin-left: 0;
}

.emotion-27 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 80px;
  border-radius: 50%;
  background-color: rgb(238,244,250);
  height: 80px;
  width: 80px;
  position: relative;
  overflow: hidden;
}

.emotion-27:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div>
  <div
    className="emotion-24 emotion-25"
    style={Object {}}
  >
    <div
      className="emotion-4 emotion-5"
      style={Object {}}
    >
      <div
        className="emotion-0 emotion-1"
        style={Object {}}
      />
      <div
        className="emotion-0 emotion-3"
        style={Object {}}
      />
    </div>
    <div
      className="emotion-22 emotion-23"
      style={Object {}}
    >
      <div
        className="emotion-8 emotion-21"
        style={Object {}}
      >
        <div
          className="emotion-8 emotion-19"
          style={Object {}}
        >
          <div
            className="emotion-8 emotion-9"
            style={Object {}}
          >
            <div
              className="emotion-0 emotion-1"
              style={Object {}}
            />
          </div>
          <div
            className="emotion-8 emotion-9"
            style={Object {}}
          >
            <div
              className="emotion-0 emotion-1"
              style={Object {}}
            />
          </div>
          <div
            className="emotion-8 emotion-9"
            style={Object {}}
          >
            <div
              className="emotion-0 emotion-1"
              style={Object {}}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-8 emotion-85"
    style={Object {}}
  >
    <div
      className="emotion-8 emotion-83"
      style={Object {}}
    >
      <div
        className="emotion-8 emotion-81"
        style={Object {}}
      >
        <div
          className="emotion-8 emotion-43"
          style={Object {}}
        >
          <div
            className="emotion-40 emotion-41"
            style={Object {}}
          >
            <div
              className="emotion-8 emotion-39"
              style={Object {}}
            >
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-27"
                  shape="circle"
                  style={Object {}}
                />
              </div>
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-1"
                  style={Object {}}
                />
              </div>
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-35"
                  style={Object {}}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-8 emotion-43"
          style={Object {}}
        >
          <div
            className="emotion-40 emotion-41"
            style={Object {}}
          >
            <div
              className="emotion-8 emotion-39"
              style={Object {}}
            >
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-27"
                  shape="circle"
                  style={Object {}}
                />
              </div>
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-1"
                  style={Object {}}
                />
              </div>
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-35"
                  style={Object {}}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-8 emotion-43"
          style={Object {}}
        >
          <div
            className="emotion-40 emotion-41"
            style={Object {}}
          >
            <div
              className="emotion-8 emotion-39"
              style={Object {}}
            >
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-27"
                  shape="circle"
                  style={Object {}}
                />
              </div>
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-1"
                  style={Object {}}
                />
              </div>
              <div
                className="emotion-8 emotion-29"
                style={Object {}}
              >
                <div
                  className="emotion-0 emotion-35"
                  style={Object {}}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonList should render shallow component ok 1`] = `
.emotion-5 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 70px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 12px;
  width: 70px;
  position: relative;
  overflow: hidden;
}

.emotion-5:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

.emotion-43 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: -10px;
}

.emotion-13 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 10px;
  margin-left: 0;
}

.emotion-11 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 25px;
  background-color: #fff;
  border: 1px solid rgb(238,244,250);
  border-radius: 3px;
}

.emotion-9 {
  position: relative;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -25px;
}

.emotion-3 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0;
  margin-left: 25px;
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 140px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 12px;
  width: 140px;
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-2 emotion-43"
  style={Object {}}
>
  <div
    className="emotion-2 emotion-13"
    style={Object {}}
  >
    <div
      className="emotion-10 emotion-11"
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-9"
        style={Object {}}
      >
        <div
          className="emotion-2 emotion-3"
          style={Object {}}
        >
          <div
            className="emotion-0 emotion-1"
            style={Object {}}
          />
        </div>
        <div
          className="emotion-2 emotion-3"
          style={Object {}}
        >
          <div
            className="emotion-0 emotion-5"
            style={Object {}}
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-2 emotion-13"
    style={Object {}}
  >
    <div
      className="emotion-10 emotion-11"
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-9"
        style={Object {}}
      >
        <div
          className="emotion-2 emotion-3"
          style={Object {}}
        >
          <div
            className="emotion-0 emotion-1"
            style={Object {}}
          />
        </div>
        <div
          className="emotion-2 emotion-3"
          style={Object {}}
        >
          <div
            className="emotion-0 emotion-5"
            style={Object {}}
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="emotion-2 emotion-13"
    style={Object {}}
  >
    <div
      className="emotion-10 emotion-11"
      style={Object {}}
    >
      <div
        className="emotion-2 emotion-9"
        style={Object {}}
      >
        <div
          className="emotion-2 emotion-3"
          style={Object {}}
        >
          <div
            className="emotion-0 emotion-1"
            style={Object {}}
          />
        </div>
        <div
          className="emotion-2 emotion-3"
          style={Object {}}
        >
          <div
            className="emotion-0 emotion-5"
            style={Object {}}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/skeleton SkeletonText should render shallow component ok 1`] = `
.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 12px;
  width: 70px;
  border-radius: 0;
  background-color: rgb(238,244,250);
  height: 12px;
  width: 70px;
  position: relative;
  overflow: hidden;
}

.emotion-1:after {
  content: '';
  top: 0;
  -webkit-transform: translateX(100%);
  -ms-transform: translateX(100%);
  transform: translateX(100%);
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 1;
  -webkit-animation: animation-r4rchm 1s infinite 2s;
  animation: animation-r4rchm 1s infinite 2s;
  background: linear-gradient( to right,rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100% );
}

<div
  className="emotion-0 emotion-1"
  style={Object {}}
/>
`;
